syntax = "proto3";
package cd;

// Définition du message CD
message CD {
  string id = 1;
  string title = 2;
  string artist = 3;
  string genre = 4;
  int32 releaseYear = 5;
  float price = 6;
}

// Définition des messages de requête et de réponse pour les méthodes
message GetCDRequest {
  string cd_id = 1;
}

message GetCDResponse {
  CD cd = 1;
}

message SearchCDsRequest {
  string query = 1;
}

message SearchCDsResponse {
  repeated CD cds = 1;
}

// Définition du service de CD
service CDService {
  rpc GetCD(GetCDRequest) returns (GetCDResponse);
  rpc SearchCDs(SearchCDsRequest) returns (SearchCDsResponse);
  rpc CreateCD(CD) returns (GetCDResponse);
  rpc UpdateCD(CD) returns (GetCDResponse);
  rpc DeleteCD(GetCDRequest) returns (GetCDResponse);
}

